hphp/hack/test/typecheck/const_collections_cant_unset.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class A {
  const array<string, string> FOO = darray['foo' => 'bar'];

  public function modify_const(): void {
    unset(self::FOO['foo']);
  }
}
